--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  margin-top: 200px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  height: 500px;
+  width: 500px;
+  background-color: rgb(207, 207, 207);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-info {
+  display: flex;
+  gap: 8rem;
 }
+
+.card-list ul {
+  list-style: none;
+  text-decoration: none;
+}
+
+.card-list ul li {
+  margin: 0;
+}
+
+h1, 
+h3, 
+.card-list ul i, 
+.card-list ul b,
+.card-list ul li:nth-child(1) {
+  color: orchid;
+}
+
+h1 {
+  position: relative;
+  bottom: 80px;
+}
+
+h3 {
+  position: relative;
+  bottom: 70px;
+}
+
+.card-info1 img {
+  width: 140px;
+  height: auto;
+}
+
+
+
