--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #0089ba;
+}
+
 .App {
   text-align: center;
 }
@@ -19,7 +23,7 @@
 .card {
   height: 500px;
   width: 500px;
-  background-color: rgb(207, 207, 207);
+  background-color: rgb(218, 218, 218);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,6 +43,7 @@
 
 .card-list ul li {
   margin: 0;
+  margin-top: 1rem;
 }
 
 h1, 
@@ -46,7 +51,7 @@ h3,
 .card-list ul i, 
 .card-list ul b,
 .card-list ul li:nth-child(1) {
-  color: orchid;
+  color: #845ec2;
 }
 
 h1 {
@@ -62,6 +67,20 @@ h3 {
 .card-info1 img {
   width: 140px;
   height: auto;
+}
+
+button {
+  background-color: #0089ba;
+  border-radius: 55px;
+  border: none;
+  padding: 10px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.card-list ul li:nth-child(1) {
+  font-weight: 800;
 }
 
 
